# rs-hicproj

./: .gitignore  Cargo.toml  README.md
gfa-graph/: Cargo.toml
gfa-graph/src/: cigar.rs  graph.rs  lib.rs  sequence.rs  utils.rs
gfa-graph/src/parser/: mod.rs  opt_fields.rs  prepack1.rs  structs1.rs
hic-convertor/: Cargo.toml
hic-convertor/src/: convertor.rs  dedup.rs  lib.rs  main.rs  pair_record.rs  sort.rs
hic-matrix/: Cargo.toml
hic-matrix/src/: balancer.rs  errors.rs  lib.rs  main.rs  matrix.rs  reader.rs  res_group.rs  selector.rs  utils.rs  writer.rs
hic-matrix/src/builders/: matrix_builder.rs  mod.rs  pair_builder.rs  res_grp_builder.rs  zoom_builder.rs
hic-scaffolder/: Cargo.toml
hic-scaffolder/src/: hic_graph.rs  lib.rs  main.rs  trans_updater.rs
