[workspace]
members = [
    "gfa-graph",
    "hic-convertor",
    "hic-matrix",
    "hic-scaffolder"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


#[dependencies]
#clap = "2.33.3"
#log = "0.4"
#fern = "0.5"
#serde = { version = "1.0.115", features = ["derive"] }
#ndarray = { version = "0.13.1", features = ["rayon"] }
#ndarray-stats = "0.3.0"
#hdf5 = "0.7.0"
#csv = "1.1.3"
#bam = "0.1.1"
#ascii = "1.0"
#num-traits = "0.2.12"
#ahash = "0.4.4"
#itertools = "0.9.0"
#chrono = "0.4"
#lazy_static = "1.4.0"
#regex = "1"
#petgraph = "0.5.1"
#byteorder = "1.3"
#threadpool = "1.0"

