[package]
name = "hic-convertor"
version = "0.1.0"
authors = ["Pavel Avdeyev <avdeyev@gwu.edu>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
log = "0.4"
fern = "0.5"
chrono = "0.4"
serde = { version = "1.0.115", features = ["derive"] }
itertools = "0.9.0"
ascii = "1.0"
csv = "1.1.3"
bam = "0.1.1"
