[package]
name = "hic-matrix"
version = "0.1.0"
authors = ["Pavel Avdeyev <avdeyevgwu.edu>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
log = "0.4"
fern = "0.5"
chrono = "0.4"
serde = { version = "1.0.115", features = ["derive"] }
itertools = "0.9.0"
ascii = "1.0"
csv = "1.1.3"
ahash = "0.4.4"
num-traits = "0.2.12"
ndarray = { version = "0.13.1", features = ["rayon"] }
ndarray-stats = "0.3.0"
hdf5 = "0.7.0"
